# rust-ffmpeg-image-man

./: Cargo.toml
src/: main.rs
