[package]
name = "realtime-video-transform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edge-detection = "0.2.6"
ffmpeg-next = "6.1.1"
image = "0.24.8"
tokio = { version = "1", features = ["full"] }
